--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>labor</artifactId>
     <version>0.0.1</version>
     <name>labor</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>11</java.version>
+        <io.springfox.version>2.7.0</io.springfox.version>
     </properties>
 
     <dependencies>
@@ -67,12 +67,12 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
+            <version>${io.springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
+            <version>${io.springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
